
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ap_device {int qid; } ;
struct CPRBX {int ccp_rtcode; int ccp_rscode; } ;
typedef int msg ;


 int ENODEV ;
 int ENOMEM ;
 int GFP_KERNEL ;
 int ZCRYPT_PCIXCC_MCL2 ;
 int ZCRYPT_PCIXCC_MCL3 ;
 int ap_recv (int ,unsigned long long*,char*,int) ;
 int ap_send (int ,int,unsigned char*,int) ;
 int free_page (unsigned long) ;
 scalar_t__ get_zeroed_page (int ) ;
 int mdelay (int) ;

__attribute__((used)) static int zcrypt_pcixcc_mcl(struct ap_device *ap_dev)
{
 static unsigned char msg[] = {
  0x00,0x06,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x58,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x43,0x41,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x50,0x4B,0x00,0x00,
  0x00,0x00,0x01,0xC4,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x07,0x24,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0xDC,0x02,0x00,0x00,0x00,0x54,0x32,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xE8,
  0x00,0x00,0x00,0x00,0x00,0x00,0x07,0x24,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x04,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
  0x00,0x00,0x00,0x00,0x50,0x4B,0x00,0x0A,
  0x4D,0x52,0x50,0x20,0x20,0x20,0x20,0x20,
  0x00,0x42,0x00,0x01,0x02,0x03,0x04,0x05,
  0x06,0x07,0x08,0x09,0x0A,0x0B,0x0C,0x0D,
  0x0E,0x0F,0x00,0x11,0x22,0x33,0x44,0x55,
  0x66,0x77,0x88,0x99,0xAA,0xBB,0xCC,0xDD,
  0xEE,0xFF,0xFF,0xEE,0xDD,0xCC,0xBB,0xAA,
  0x99,0x88,0x77,0x66,0x55,0x44,0x33,0x22,
  0x11,0x00,0x01,0x23,0x45,0x67,0x89,0xAB,
  0xCD,0xEF,0xFE,0xDC,0xBA,0x98,0x76,0x54,
  0x32,0x10,0x00,0x9A,0x00,0x98,0x00,0x00,
  0x1E,0x00,0x00,0x94,0x00,0x00,0x00,0x00,
  0x04,0x00,0x00,0x8C,0x00,0x00,0x00,0x40,
  0x02,0x00,0x00,0x40,0xBA,0xE8,0x23,0x3C,
  0x75,0xF3,0x91,0x61,0xD6,0x73,0x39,0xCF,
  0x7B,0x6D,0x8E,0x61,0x97,0x63,0x9E,0xD9,
  0x60,0x55,0xD6,0xC7,0xEF,0xF8,0x1E,0x63,
  0x95,0x17,0xCC,0x28,0x45,0x60,0x11,0xC5,
  0xC4,0x4E,0x66,0xC6,0xE6,0xC3,0xDE,0x8A,
  0x19,0x30,0xCF,0x0E,0xD7,0xAA,0xDB,0x01,
  0xD8,0x00,0xBB,0x8F,0x39,0x9F,0x64,0x28,
  0xF5,0x7A,0x77,0x49,0xCC,0x6B,0xA3,0x91,
  0x97,0x70,0xE7,0x60,0x1E,0x39,0xE1,0xE5,
  0x33,0xE1,0x15,0x63,0x69,0x08,0x80,0x4C,
  0x67,0xC4,0x41,0x8F,0x48,0xDF,0x26,0x98,
  0xF1,0xD5,0x8D,0x88,0xD9,0x6A,0xA4,0x96,
  0xC5,0x84,0xD9,0x30,0x49,0x67,0x7D,0x19,
  0xB1,0xB3,0x45,0x4D,0xB2,0x53,0x9A,0x47,
  0x3C,0x7C,0x55,0xBF,0xCC,0x85,0x00,0x36,
  0xF1,0x3D,0x93,0x53
 };
 unsigned long long psmid;
 struct CPRBX *cprbx;
 char *reply;
 int rc, i;

 reply = (void *) get_zeroed_page(GFP_KERNEL);
 if (!reply)
  return -ENOMEM;

 rc = ap_send(ap_dev->qid, 0x0102030405060708ULL, msg, sizeof(msg));
 if (rc)
  goto out_free;


 for (i = 0; i < 6; i++) {
  mdelay(300);
  rc = ap_recv(ap_dev->qid, &psmid, reply, 4096);
  if (rc == 0 && psmid == 0x0102030405060708ULL)
   break;
 }

 if (i >= 6) {

  rc = -ENODEV;
  goto out_free;
 }

 cprbx = (struct CPRBX *) (reply + 48);
 if (cprbx->ccp_rtcode == 8 && cprbx->ccp_rscode == 33)
  rc = ZCRYPT_PCIXCC_MCL2;
 else
  rc = ZCRYPT_PCIXCC_MCL3;
out_free:
 free_page((unsigned long) reply);
 return rc;
}
